--- a/tekapp/src/main/res/layout/activtiy_main.xml
+++ b/tekapp/src/main/res/layout/activtiy_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.teksyndicate.app.activities.ActivitiyMain">
+    tools:context="com.teksyndicate.app.activities.ActivityMain">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
